<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Mon Cellier</string>
    <string name="app_quit_title">Quitter</string>
    <string name="app_quit_msg">Etes-vous sûr de vouloir quitter l\'application ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="warning">Attention</string>
    <string name="menu_settings">Paramètres</string>
    <string name="main_add_vin">Ajouter des bouteilles</string>
    <string name="main_list_vin">Voir toute la cave</string>
    <string name="main_list_vin_par_region">Voir par région</string>
    <string name="main_list_vin_par_annee_maturite">Voir par année de maturité</string>
    <string name="main_send_list">Envoyer la liste des vins</string>
    <string name="main_histo_vin">Vins épuisés</string>
    <string name="main_accords">Accords mets/vins</string>
    <string name="main_export_db">Sauvegarde des données</string>
    <string name="main_import_db">Restauration des données</string>
    <string name="title_activity_main">Mon Cellier</string>
    <string name="title_activity_add_vin">Ajout d\'un vin</string>
    <string name="title_activity_add_vin_region_choix">Ajout d\'un vin : choisissez la région</string>
    <string name="title_activity_add_vin_sous_region_choix">Ajout d\'un vin : choisissez le territoire</string>
    <string name="title_activity_add_vin_appellation_choix">Ajout d\'un vin : choisissez l\'appellation</string>
    <string name="title_activity_edit_vin">Edition d\'un vin</string>
    <string name="title_activity_detail_vin">Détail</string>
    <string name="title_activity_liste_mets">Accords mets/vins</string>
    <string name="title_activity_liste_vins_par_region">Recherche par région</string>
    <string name="title_activity_liste_vins_par_annee_maturite">Recherche par année de maturité</string>
    <string name="save">Enregistrer</string>
    <string name="save_ok">Enregistré avec succès.</string>
    <string name="save_error">Erreur lors de l\'enregistrement !</string>
    <string name="export_db_ok">Vos données ont bien été sauvegardées sur la carte SD.</string>
    <string name="export_db_error">Echec : une erreur est survenue pendant l\'export des données !</string>
    <string name="import_db_ok">Vos données ont bien été restaurées.</string>
    <string name="import_db_error">Echec : impossible d\'importer les données ! Vérifier que le fichier de sauvegarde est bien présent dans le répertoire "MonCellier" de votre carte SD</string>
    <string name="import_db_confirm">Etes-vous sûr de vouloir restaurer les données depuis votre carte SD ?</string>
    <string name="confirm">Confirmation</string>
    <string name="cancel">Annuler</string>
    <string name="pays">Pays</string>
    <string name="region">Région</string>
    <string name="territoire">Territoire</string>
    <string name="appellation">Appellation</string>
    <string name="choix_pays">Choix d\'un pays</string>
    <string name="choix_region">Choix d\'une région</string>
    <string name="choix_territoire">Choix d\'un territoire</string>
    <string name="choix_appellation">Choix d\'une appellation</string>
    <string name="couleur">Couleur</string>
    <string name="couleur_rouge">Rouge</string>
    <string name="couleur_blanc">Blanc</string>
    <string name="couleur_rose">Rosé</string>
    <string name="nom">Nom</string>
    <string name="producteur">Producteur</string>
    <string name="annee">Année</string>
    <string name="bouteille">Bouteille</string>
    <string name="bouteilles">Bouteilles</string>
    <string name="note">Note</string>
    <string name="etiquette">Etiquette</string>
    <string name="prix">Prix</string>
    <string name="etagere">Emplacement</string>
    <string name="commentaire">Commentaire</string>
    <string name="date_ajout">Date d\'ajout</string>
    <string name="annee_maturite">Année maturité</string>
    <string name="photographier">Prendre une photo</string>
    <string name="import_gallerie">Importer depuis la gallerie</string>
    <string name="retirer">Retirer une bouteille</string>
    <string name="retirer_impossible">Impossible de retirer une bouteille car le stock est épuisé !</string>
    <string name="stock_maj_ok">Le stock a été mis à jour.</string>
    <string name="stock_maj_ko">Le stock n\'a pas pu être mis à jour.</string>
    <string name="detail">Détail</string>
    <string name="editer">Editer</string>
    <string name="supprimer">Supprimer</string>
    <string name="action">Action</string>
    <string name="delete_item_msg">Etes-vous sûr de vouloir supprimer cet item ?</string>
    <string name="item_deleted">L\'item a été supprimé.</string>
    <string name="send">Envoyer</string>
    <string name="search_met">Rechercher un met...</string>
    <string name="selected_met">Plat choisi :</string>
    <string name="accord_met_vin">Types de vin en accord :</string>
    <string name="accord_vin_met">Idées de plats en accord :</string>
    <string name="accord_met_vin_available">Bouteilles du cellier en accord :</string>
    <string name="accord_met_vin_no_bottle">Aucune bouteille trouvée :-(</string>
</resources>
