<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
        
        <TextView
            android:id="@+id/addVinFormRegionTitle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/region" />
        
        <TextView
            android:id="@+id/addVinFormRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
        
        <TextView
            android:id="@+id/addVinFormAppellationTitle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/appellation" />
        
        <TextView
            android:id="@+id/addVinFormAppellation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/addVinFormNomText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/nom" />

        <AutoCompleteTextView
            android:id="@+id/addVinFormNom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </AutoCompleteTextView>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/addVinFormProducteurText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/producteur" />

        <AutoCompleteTextView
            android:id="@+id/addVinFormProducteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/producteur" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/addVinFormAnneeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/annee" />

        <fr.kougteam.myCellar.widget.NumberPicker
            android:id="@+id/yearPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            defaultValue="2012"
            maxValue="2050"
            minValue="1900"
            plusminus_width="80"
            repeatAcceleration="10"
            textSize="20dp"
            textarea_width="150"
            vertical="false" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/addVinFormBouteillesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/bouteilles" />

        <fr.kougteam.myCellar.widget.NumberPicker
            android:id="@+id/bouteillesPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            defaultValue="1"
            minValue="0"
            plusminus_width="80"
            repeatAcceleration="10"
            textSize="20dp"
            textarea_width="50"
            vertical="false" />
    </TableRow>

    <View
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#CCCCCC" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <Button
            android:id="@+id/addVinFormCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
        
        <Button
            android:id="@+id/addVinFormSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </TableRow>

</TableLayout>